fix on different devices

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
+<!--suppress JSUnresolvedLibraryURL -->
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
     <title>Module 1</title>
     <script src="https://kit.fontawesome.com/ed512275d7.js" crossorigin="anonymous"></script>
     <link href="css/index.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <header class="pageHeader">
     Викладач психології, курс про трансгресію
     <input type="search" class="search" placeholder="Знайти">
-<!--    <button type="submit">search</button>-->
 </header>
 <main class="mainContainer">
     <aside class="mainContainer_additional">Якась додаткова інформація</aside>
